refactor: 가독성을 위해 지역 변수 분리, 복사에서 불변 컬렉션으로 수정